# check_mailbox_health

./: .gitattributes  .gitignore  ChangeLog  Makefile.am  README  README.md  configure.ac  credentials
contrib/: check_mailbox_health.php
doc/: Makefile.am  Makefile.in  check_mailbox_health.de.txt  check_mailbox_health.en.txt
plugins-scripts/: GLPlugin.pm  Makefile.am  check_mailbox_health.pl
plugins-scripts/Classes/: Device.pm  IMAP.pm  MAIL.pm  Mailserver.pm  O365.pm
t/: 01-test_plugin.t  02-test_modes.t  Makefile.am  check_mailbox_health.t
